# PdfToTextConverter

./: .gitignore  .replit  README.md  app.py  create_sample_pdf.py  database_manager.py  import_keywords.py  keyword_extractor.py  keywords.txt  main.py  models.py  pdf_converter.py  process_pdfs.py  process_single_pdf.py  pyproject.toml  run_converter.py  run_with_keywords.py  search_keywords_in_file.py
TaiVe/: sample_vietnamese.txt
attached_assets/: Pasted-Th-n-s-h-c-l-g-N-ng-l-ng-s-1-N-ng-l-ng-s-2-N-ng-l-ng-s-3-N-ng-l-ng-s-4-N-ng-l-ng-s-1744534588295.txt
static/css/: style.css
templates/: 404.html  500.html  base.html  index.html  keywords.html  process.html  results.html
